fix icon stretching

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -233,9 +233,11 @@ body {
     font-size: 14px; }
     #container-confirm-content ul li {
       display: flex;
+      align-items: center;
       padding: 5px; }
       #container-confirm-content ul li img {
         width: 15px;
+        height: 15px;
         margin-right: 7px; }
   #container-confirm-content .warning {
     font-size: 16px;
