--- a/src/sass/sections/_confirm.scss
+++ b/src/sass/sections/_confirm.scss
@@ -15,10 +15,12 @@
 
     li {
       display: flex;
+      align-items: center;
       padding: 5px;
   
       img {
         width: 15px;
+        height: 15px;
         margin-right: 7px;
       }
     }
